# Vanta

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CODEX_START_PROMPT.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/orchestrator/: pyproject.toml  sidecar_entry.py
apps/orchestrator/migrations/: 001_initial.sql  002_real_generation.sql  003_character_references_loras.sql  004_job_progress.sql  005_pose_library.sql  006_pose_progress.sql  007_derivative_results.sql  008_video_motion.sql  009_local_training.sql  010_recipe_library.sql  011_media_index.sql  012_video_sequences.sql  013_installation_jobs.sql  014_authoritative_installation_jobs.sql
apps/orchestrator/src/vanta_orchestrator/: __init__.py  app.py  comfy_runtime.py  config.py  database.py  downloads.py  engine.py  installation_jobs.py  main.py  media.py  pose.py  repositories.py  schemas.py  training.py  video.py
apps/orchestrator/tests/: conftest.py  test_api.py  test_downloads.py  test_installation_jobs.py  test_migrations.py  test_real_generation_domain.py  test_release_runtime.py  test_training_domain.py
data/: starter_presets.json
docs/: ADR-001-foundation.md  ADR-002-engine-manifests.md  AUTOPILOT_STATUS.md  CAPABILITY_EVIDENCE.md  DEVELOPMENT_SETUP_WINDOWS.md  ENGINE_PACKS.md  ESSENTIAL_V1_RUNBOOK.md  FRESH_INSTALL_ACCEPTANCE.md  IMPLEMENTATION_PLAN.md  LOCAL_SECURITY.md  (+4 more)
(+29 files in other folders)
